--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     
      <div class="herop">
-            <img class="image1" src="/image/IMG_20250808_132102_110~3.jpg" alt="profile">
+            <img class="image1" src="./image/IMG_20250808_132102_110~3.jpg" alt="profile">
               </div>
                <div class="hero">
                 <p>
