--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>learning portfolio</title>
     <link rel="stylesheet" href="./style.css">
+    <i class="fa-brands fa-dropbox"></i>
+
 </head>
 <body>
     <div class="container">
@@ -13,10 +15,19 @@
                 <a href="#case studies">case studies</a>
                 <a href="#testimonial">testimonial</a>
                 <a href="#Recent wor">Recent work</a>
-                <a href="#Geet in touch">Get in touch</a>
+                <a href="#Get in touch">Get in touch</a>
+                <a href="#comment">comments</a>
+                <a href="#share">share</a>
+                <a href="#like">like</a>
+                <a href="#search">search</a>
             </div>
+            <img src="./image/images (1).png" alt="click" style="width: 20px;height: 20px;border-radius: 5px;
+            cursor: pointer;border-radius: 5px;">
+            <img src="./image/download.png" alt="linkedin" style="width: 40px;height: 40px;
+            cursor: pointer; border-radius: 5px;">
+            <img src="./image/images.png" alt="image" style="width: 40px;height: 40px; border-radius: 5px;cursor: pointer;">
+            <img src="./image/download (1).png" alt="twitter" style="width: 40px;height: 40px;border-radius: 5px;cursor: pointer;">
         </nav>
-    
      <div class="herop">
             <img class="image1" src="./image/IMG_20250808_132102_110~3.jpg" alt="profile">
               </div>
